[tool.poetry]
name = "python-library-template"
version = "0.1.0"
description = "a template for python libraries"
authors = ["sushi-chaaaan <mail@sushichan.live>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "python_library_template", from = "src" }]


[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
ruff = "^0.0.292"
poethepoet = "^0.24.0"
pre-commit = "^3.4.0"
mypy = "^1.5.1"


[tool.black]
target-version = ["py310"]
line-length = 125


[tool.ruff]
target-version = "py310"
line-length = 125
include = ["*.py", "*.pyi", "**/pyproject.toml"]
ignore = [
    "E203",
    "D",
    "RUF001",  # 全角記号など`ambiguous unicode character`も使いたいため
    "RUF002",  # 全角記号など`ambiguous unicode character`も使いたいため
    "RUF003",  # 全角記号など`ambiguous unicode character`も使いたいため
    "PLC1901", # compare-to-empty-string : `if a == "`のように空文字列で直接比較したいときがあるため
    "ANN101",  # missing-type-self: 引数selfには型ヒントは付けていないため
    "ANN102",  # missing-type-cls: 引数clsには型ヒントは付けていないため
    "ERA",     # : 役立つこともあるが、コメントアウトしていないコードも警告されるので無視する
]
select = ["ALL"]


[tool.ruff.per-file-ignores]
"/**/tests/**" = [
    "INP001", # add __init__.py to tests directory is too much work
    "S101",   # allow to use assert in tests
]


[tool.poe.tasks]
install = "poetry run pre-commit install"
lint = "poetry run ruff check ./src"
format = "poetry run black ./src"
export = "poetry export -f requirements.txt -o requirements.txt --only main --without-hashes"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
